# VideOCR

./: .gitignore  .pre-commit-config.yaml  README.md  README_ch.md  VideOCR.py  build.py  pyproject.toml  requirements_cpu.txt  videocr.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pre-commit.yml
CLI/: videocr.py  videocr_cli.py
CLI Standalone/: videocr.py
CLI Standalone/videocr/: api.py
CLI/videocr/: __init__.py  api.py  lang_dictionaries.py  models.py  pyav_adapter.py  utils.py  video.py  video_adapter.py
Installer/: Inno Setup script CPU version.iss  Inno Setup script GPU version.iss
Installer/Linux/: install_videocr.sh  uninstall_videocr.sh
Installer/Windows/: installer_template.iss
Standalone/: videocr.py
Standalone/videocr/: api.py
languages/: ar.json  ch.json  de.json  en.json  es.json  fr.json  id.json  it.json  ja.json  ko.json  pt.json  ru.json  th.json  vi.json
videocr/: models.py  utils.py  video.py
